tests/NormalTests/paczka1/fuzzy1/15094255.err
Error in line 6: LXSlJpCmn S296 46,8
Error in line 11: S288 S288 42,2
Error in line 12: LXSlJpCmn A833 24,9
Error in line 23: Or140 S288 68,1
Error in line 9: M5gNbH S288 4,5
Error in line 40: S288 S29x 53,4
